--- a/package.json
+++ b/package.json
@@ -3,17 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "NODE_ENV=production node server.js",
+    "lint": "next lint",
+    "export": "next export",
+    "clean": "next clean"
   },
   "dependencies": {
+    "antd": "^5.7.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.5.1",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-image-file-resizer": "^0.4.8",
+    "sequelize": "^6.32.1",
+    "sharp": "^0.32.3",
+    "tailwindcss": "3.3.3",
+    "uuid": "^9.0.0"
   }
 }
